make my profile prettier

--- a/index.html
+++ b/index.html
@@ -1,39 +1,1 @@
-<!DOCTYPE html>
-<html lang = "en">
-  <head>
-    <title>My Profile</title>
-    <meta charset="UTF-8">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-      <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="style.css">
-  </head>
-<body>
-  <div class="container">
-    <div class="card" id="introduction">
-      <h1> Hello World</h1>
-        <img src="./images/pic.jpg" class="img-circle" width="100px" alt="Sarah Harleux">
-      <p>
-        "The world🌏 is Big and I'm really tiny, so there's plenty to do."
-      </p>
-      <a href="https://www.google.com/maps/"><button>Discover the World</button></a>
-      </div>
-    <div class="card">
-      <h2>Follow the White Rabbit</h2>
-        <ul class="list-inline">
-          <li>
-            <a href="https://www.facebook.com/sarah.harleux/" target="_blank">
-              <i class="fab fa-facebook"></i></a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/" target="_blank">
-              <i class="fab fa-linkedin-in"></i></a>
-          </li>
-          <li>
-             <a href="https://twitter.com/" target="_blank">
-              <i class="fab fa-twitter"></i></a>
-         </li>
-      </ul>
-    </div>
-  </div>
-</body>
-<html>
+<!DOCTYPE html><html lang = "en">  <head>    <title>My Profile</title>    <meta charset="UTF-8">      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">      <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300&display=swap" rel="stylesheet">      <link rel="stylesheet" href="style.css">  </head><body>  <div class="container">        <div class="card" id="introduction">          <h1>Sarah H</h1>          <img src="./images/pic.jpg" class="img-circle" width="100px" alt="Sarah Harleux">            <p>              "I always thought they were fabulous monsters! 👹."            </p>          <a href="https://www.google.com/maps/" target="-blank" class="btn-green">Through the Looking Glass</a>        </div>    </section>      <div class="card">          <p>"Too Old to Trick or Treat, Too Young to Die", so what else is there to do? Learning, reading, creating, cotemplating, developing...</p>      </div>      <div class="card">        <h2>Follow the White Rabbit</h2>          <ul class="list-inline">            <li>              <a href="https://www.facebook.com/sarah.harleux/" target="_blank">                <i class="fab fa-facebook"></i></a>            </li>            <li>              <a href="https://www.linkedin.com/" target="_blank">                <i class="fab fa-linkedin-in"></i></a>            </li>            <li>               <a href="https://twitter.com/" target="_blank">                <i class="fab fa-twitter"></i></a>           </li>        </ul>      </div>  </div></body><html>
